--- a/doc-Deployment_Planning_Guide/Introduction_to_Red_Hat_CloudForms.adoc
+++ b/doc-Deployment_Planning_Guide/Introduction_to_Red_Hat_CloudForms.adoc
@@ -3,9 +3,9 @@
 
 CloudForms Management Engine delivers the insight, control, and automation enterprises need to address the challenges of managing virtual environments.
 This technology enables enterprises with existing virtual infrastructures to improve visibility and control, and those starting virtualization deployments to build and operate a well-managed virtual infrastructure.
-		
+
 Red Hat CloudForms 4.0 is comprised of a single component, the CloudForms Management Engine. It has the following feature sets:
-		
+
 * Insight: Discovery, Monitoring, Utilization, Performance, Reporting, Analytic, Chargeback, and Trending.
 * Control: Security, Compliance, Alerting, and Policy-Based Resource, and Configuration Enforcement.
 * Automate: IT Process, Task and Event, Provisioning, and Workload Management and Orchestration.
@@ -33,7 +33,7 @@ Each storage location must have a SmartProxy with visibility to it. The SmartPro
 To use CloudForms Management Engine, the following requirements must be met:
 
 * One of the following web browsers:
-** Mozilla Firefox for versions supported under Mozilla's Extended Support Release (ESR) 
+** Mozilla Firefox for versions supported under Mozilla's Extended Support Release (ESR)
 ** Internet Explorer 8 or higher
 ** Google Chrome for Business
 * A monitor with minimum resolution of 1280x1024.
@@ -44,7 +44,7 @@ To use CloudForms Management Engine, the following requirements must be met:
 
 [IMPORTANT]
 =======
-Due to browser limitations, Red Hat supports logging in to only one tab for each multi-tabbed browser. Console settings are saved for the active tab only. For the same reason, CloudForms Management Engine does not guarantee that the browser's +Back+ button will produce the desired results. Red Hat recommends using the breadcrumbs provided in the Console.
+Due to browser limitations, Red Hat supports logging in to only one tab for each multi-tabbed browser. Console settings are saved for the active tab only. For the same reason, CloudForms Management Engine does not guarantee that the browser's btn:[Back] button will produce the desired results. Red Hat recommends using the breadcrumbs provided in the Console.
 =======
 
 === Terminology
@@ -59,29 +59,29 @@ Alert:: CloudForms Management Engine alerts notify administrators and monitoring
 The notification can take the form of either an email or an SNMP trap.
 
 Analysis Profile:: A customized scan of hosts, virtual machines, or instances. You can collect information from categories, files, event logs, and registry entries.
-				
+
 Cloud:: A pool of on-demand and highly available computing resources. The usage of these resources are scaled depending on the user requirements and metered for cost.
 
 CloudForms Management Engine Appliance:: A virtual machine on which the virtual management database (VMDB) and CloudForms Management Engine server reside.
-				
+
 CloudForms Management Engine Console:: A web-based interface into the CloudForms Management Engine Appliance.
 
 CloudForms Management Engine Role:: A designation assigned to a CloudForms Management Engine server that defines what a CloudForms Management Engine server can do.
 
 CloudForms Management Engine Server:: The application that runs on the CloudForms Management Engine Appliance and communicates with the SmartProxy and the VMDB.
-				
+
 Cluster:: Hosts that are grouped together to provide high availability and load balancing.
 
 Condition:: A test of criteria triggered by an event.
 
 Discovery:: Process run by the CloudForms Management Engine server which finds virtual machine and cloud providers.
-				
+
 Drift:: The comparison of a virtual machine, instance, host, cluster to itself at different points in time.
-				
+
 Event:: A trigger to check a condition.
 
 Event Monitor:: Software on the CloudForms Management Engine Appliance which monitors external providers for events and sends them to the CloudForms Management Engine server.
-				
+
 Host:: A computer on which virtual machine monitor software is loaded.
 
 Instance/Cloud Instance:: A on-demand virtual machine based upon a predefined image and uses a scalable set of hardware resources such as CPU, memory, networking interfaces.
@@ -97,18 +97,18 @@ Provider:: A computer on which software is loaded which manages multiple virtual
 Policy:: A combination of an event, a condition, and an action used to manage a virtual machine.
 
 Policy Profile:: A set of policies.
-				
+
 Refresh:: A process run by the CloudForms Management Engine server which checks for relationships of the provider or host to other resources, such as storage locations, repositories, virtual machines, or instances.
 It also checks the power states of those resources.
 
 Regions:: Regions are used to create a central database for reporting and charting. Regions are used primarily to consolidate multiple VMDBs into one master VMDB for reporting.
-				
+
 Resource:: A host, provider, instance, virtual machine, repository, or datastore.
 
 Resource Pool:: A group of virtual machines across which CPU and memory resources are allocated.
 
 Repository:: A place on a datastore resource which contains virtual machines.
-				
+
 SmartProxy:: The SmartProxy is a software agent that acts on behalf of the CloudForms Management Engine Appliance to perform actions on hosts, providers, storage and virtual machines.
 
 :: The SmartProxy can be configured to reside on the CloudForms Management Engine Appliance or on an ESX server version.
@@ -120,7 +120,7 @@ SmartState Analysis:: Process run by the SmartProxy which collects the details o
 SmartTags:: Descriptors that allow you to create a customized, searchable index for the resources in your clouds and infrastructure.
 
 Storage Location:: A device, such as a VMware datastore, where digital information resides that is connected to a resource.
-				
+
 Tags:: Descriptive terms defined by a CloudForms Management Engine user or the system used to categorize a resource.
 
 Template:: A template is a copy of a preconfigured virtual machine, designed to capture installed software and software configurations, as well as the hardware configuration, of the original virtual machine.
@@ -138,10 +138,10 @@ Virtual Thumbnail:: An icon divided into smaller areas that summarize the proper
 
 Zones:: CloudForms Management Engine Infrastructure can be organized into zones to configure failover and to isolate traffic. Zones can be created based on your environment.
 Zones can be based on geographic location, network location, or function. When first started, new servers are put into the default zone.
-		
+
 === Getting Help and Giving Feedback
 
-If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at http://access.redhat.com. Through the customer portal, you can:
+If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at http://access.redhat.com. Through the Customer Portal, you can:
 
 * search or browse through a knowledgebase of technical support articles about Red Hat products
 * submit a support case to Red Hat Global Support Services (GSS)
@@ -154,9 +154,7 @@ You can find a list of publicly available mailing lists at https://www.redhat.co
 
 If you find a typographical error in this manual, or if you have thought of a way to make this manual better, please submit a report to GSS through the customer portal.
 
-When submitting a report, be sure to mention the manual's identifier: Planning Guide
+When submitting a report, be sure to mention the manual's identifier: +Deployment Planning Guide+
 
 If you have a suggestion for improving the documentation, try to be as specific as possible when describing it.
 If you have found an error, please include the section number and some of the surrounding text so we can find it easily.
-	
-	
