--- a/doc-Deployment_Planning_Guide/Security.adoc
+++ b/doc-Deployment_Planning_Guide/Security.adoc
@@ -5,7 +5,7 @@
 
 [width="100%",cols="3,3,2,1,1,2",options="header",]
 |============================================================================================================
-|Initiator (CFME Role if applicable) |Receiver (CFME Role if applicable) |Application |TCP Port |UDP Port |Purpose/Reason 
+|Initiator (CFME Role if applicable) |Receiver (CFME Role if applicable) |Application |TCP Port |UDP Port |Purpose/Reason
 |Administrator (Internet Browser) |CFME Appliance (User Interface) |HTTPS |443 |  |Access to CFME Appliance User Interface
 |Administrator (Internet Browser) |CFME Appliance (User Interface)  |HTTP |80 |  |Redirect Web Browser to HTTPS service (443)
 |Service Catalog or other integration through Web Service |CFME Appliance (Web Service) |HTTPS |443 |  |Access to CFME Appliance Web Service
@@ -29,10 +29,9 @@
 
 [width="100%",cols="3,3,2,1,1,2",options="header",]
 |=======================================================================
-|Initiator (CFME Role if applicable) |Receiver (CFME Role if applicable) |Application |TCP Port |UDP Port |Purpose/Reason 
+|Initiator (CFME Role if applicable) |Receiver (CFME Role if applicable) |Application |TCP Port |UDP Port |Purpose/Reason
 |CFME Appliance (SmartProxy) |RHEV-M Server |HTTPS |8443 |  |API communications to RHEV-M environment (Inventory, Operations, SmartProxy)
-|CFME Appliance (C&U) |RHEV-M Server |PostgreSQL |5432 |  |RHEV-M History Database (Database connectivity not enabled by default). See https://access.redhat.com/solutions/63277[How to access RHEV-M Postgres DB from remote machine.]
-|CFME Appliance |RHEVH Hosts or RHEL Hypervisors |SSH|22 |  |SSH connections
-|CFME Appliance |RHEVH Hosts or RHEL Hypervisors |DirectLUN |  |Direct LUN hook must be installed and enabled for embedded VM scanning on FC or iSCSI storage devices. Not a tcp/udp connection.
+|CFME Appliance (C&U) |RHEV-M Server |PostgreSQL |5432 |  |RHEV-M History Database (Database connectivity not enabled by default). See https://access.redhat.com/solutions/63277[How to access the RHEV-M Postgres DB from a remote machine.]
+|CFME Appliance |RHEV-H Hosts or RHEL Hypervisors |SSH|22 |  |SSH connections
+|CFME Appliance |RHEV-H Hosts or RHEL Hypervisors |DirectLUN |  |Direct LUN hook must be installed and enabled for embedded VM scanning on FC or iSCSI storage devices. Not a tcp/udp connection.
 |=======================================================================
-
