Attempting to use guilabel AsciiDoc tag.

--- a/doc-Installing_CloudForms_on_VMware_vSphere/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_VMware_vSphere/Installing_CloudForms.adoc
@@ -11,7 +11,7 @@ After installing the CloudForms Management Engine Appliance, you must configure 
 === Obtaining the CloudForms Management Engine Appliance
 
 . Go to link:https://access.redhat.com[access.redhat.com] and log in to the Red Hat Customer Portal using your customer account details.
-. Click btn:[Downloads] in the menu bar.
+. Click guilabel[]#Downloads# in the menu bar.
 . Click btn:[A-Z] to sort the product downloads alphabetically.
 . Click menu:Red Hat CloudForms[Download Latest] to access the product download page.
 . From the list of installers and images, select the +CFME VMware Virtual Appliance+ download link.
