--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Installing_CloudForms.adoc
@@ -85,7 +85,7 @@ The following procedure demonstrates creating a flavor with the minimum requirem
 * *Ephemeral Disk GB*: 0
 * *Swap Disk MB*: 0
 +
-. Click +Create Flavor+.
+. Click 8Create Flavor*.
 
 A new flavor specific to CloudForms Management Engine is created.
 
@@ -123,11 +123,11 @@ $ nova-manage floating create IP_BLOCK
 . Click menu:Floating IPs[Allocate IP To Project]. The *Allocate Floating IP* window is displayed.
 image:7218.png[title="Allocate Floating IP"]
 . Click *Allocate IP* to allocate a floating IP from the pool. The allocated IP address appears in the *Floating IPs* table.
-. Select the newly allocated IP address from the *Floating IPs8 table.
+. Select the newly allocated IP address from the *Floating IPs* table.
   Click *Associate* to assign the IP address to a specific instance.
 image:7217.png[title="Manage Floating IP Associations"]
 . Select an instance with which to associate the floating IP Address.
-. Click +Associate to associate the IP address with the selected instance.
+. Click *Associate* to associate the IP address with the selected instance.
 
 [NOTE]
 ======
