--- a/doc-Managing_Providers/Managing_Containers.adoc
+++ b/doc-Managing_Providers/Managing_Containers.adoc
@@ -1,6 +1,6 @@
 = Managing Containers
 
-Starting with Red Hat CloudForms 4.0, CloudForms Management Engine allows for container management. The orchestration system can be OpenShift Enterprise or Atomic Enterprise Platform, and it can work with both RHEV and VMware providers.
+Starting with Red Hat CloudForms 4.0, CloudForms Management Engine allows for container management. The orchestration system can be OpenShift Enterprise or Atomic Enterprise Platform. These systems can be added to the CloudForms Management Engine appliance as container providers. You can also connect your container providers with OpenStack, RHEV, or VMware vCenter environments.
 
 The +Containers+ area in the top menu bar has options to manage containers, containers providers, images, nodes, registries, pods, and other components.
 
@@ -115,8 +115,7 @@ A +Containers+ summary page allows you to view information on different aspects 
 * Which node is the container running on?
 * Which part of a pod is the container?
 * What is the container ID?
-* What is the name of the container image?
-* What are other properties of the container image (for example, tag)?
+* What is the name of the container image? What are other properties of the container image (for example, tag)?
 
 .Viewing a Containers Summary
 . Navigate to menu:Containers[Providers]. 
@@ -157,7 +156,7 @@ A +Pods+ summary page allows you to view information on different aspects of a p
 
 * Which containers are part of the pod?
 * Which services reference the pod?
-* Which nodes does the pod run on?
+* Which node does the pod run on?
 * Is the pod controlled by a replicator?
 * What is the IP address of the pod?
 
@@ -201,7 +200,7 @@ The +Topology+ widget is an interactive topology graph, showing the status and r
 
 * The topology graph includes pods, containers, services, nodes, virtual machines, hosts, routes, and replicators within the overall containers provider environment.
 * It is possible to drag elements to reposition the graph.
-* Hovering over any individual graph node will display a summary of details for the individual node.
+* Hovering over any individual graph element will display a summary of details for the individual element.
 * Double-click the entities in the graph to navigate to their summary pages.
 * Click the legend at the top of the graph to show or hide entities.
 * Click +Display Names+ on the right-hand side of the page to show or hide entity names.
