--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Installing_CloudForms.adoc
@@ -85,7 +85,7 @@ The following procedure demonstrates creating a flavor with the minimum requirem
 * *Ephemeral Disk GB*: 0
 * *Swap Disk MB*: 0
 +
-. Click 8Create Flavor*.
+. Click *Create Flavor*.
 
 A new flavor specific to CloudForms Management Engine is created.
 
