--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Configuring_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Configuring_CloudForms.adoc
@@ -105,15 +105,15 @@ CloudForms Management Engine configures the internal database.
 
 === Configuring an External Database
 
-The 'postgresql.conf' file used with CloudForms Management Engine databases requires specific settings for correct operation. For example, it must correctly reclaim table space, control session timeouts, and format the 'PostgreSQL' server log for improved system support. Due to these requirements, Red Hat recommends that external CloudForms Management Engine databases use a 'postgresql.conf' file based on the standard file used by the CloudForms Management Engine appliance.
+The postgresql.conf file used with CloudForms Management Engine databases requires specific settings for correct operation. For example, it must correctly reclaim table space, control session timeouts, and format the PostgreSQL server log for improved system support. Due to these requirements, Red Hat recommends that external CloudForms Management Engine databases use a postgresql.conf file based on the standard file used by the CloudForms Management Engine appliance.
 
-Ensure you configure the settings in the 'postgresql.conf' to suit your system. For example, customize the shared_buffers setting according to the amount of real storage available in the external system hosting the 'PostgreSQL' instance. In addition, depending on the aggregate number of appliances expected to connect to the 'PostgreSQL' instance, it may be necessary to alter the max_connections setting.
+Ensure you configure the settings in the postgresql.conf to suit your system. For example, customize the shared_buffers setting according to the amount of real storage available in the external system hosting the PostgreSQL instance. In addition, depending on the aggregate number of appliances expected to connect to the PostgreSQL instance, it may be necessary to alter the max_connections setting.
 
-Because the 'postgresql.conf' file controls the operation of all databases managed by a single instance of 'PostgreSQL', do not mix CloudForms Management Engine databases with other types of databases in a single 'PostgreSQL' instance.
+Because the postgresql.conf file controls the operation of all databases managed by a single instance of PostgreSQL, do not mix CloudForms Management Engine databases with other types of databases in a single PostgreSQL instance.
 
 [NOTE]
 =======
-CloudForms Management Engine 3.x requires PostgreSQL version 9.2.4.
+CloudForms Management Engine 4.x requires PostgreSQL version 9.4.
 =======
 
 . Start the appliance and open a terminal console from your virtualization or cloud provider.
